<resources>
    <string name="app_name">Movie</string>
    <string name="no_account">Don\'t have an account?</string>

    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="sign_up_text">"<u>"Sign Up"</u>"</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="exit">Exit</string>
    <string name="search">Search</string>
    <string name="movie_not_found">Movie not found</string>
    <string name="movies_with_actor">Movies with actor:</string>
    <string name="recommended_movies">Recommended movies:</string>
    <string name="remember_me">Remember me</string>
    <string name="videos">Videos</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="release_date">Release Date:</string>
    <string name="runtime">Runtime:</string>
    <string name="error">Error</string>
    <string name="problem_with_entry">Email or password is not correct!</string>
    <string name="problem_with_create_account">Username or email exist!</string>
    <string name="ok">Ok</string>
    <string name="favorites_is_empty">Favorites is empty</string>
    <string name="favorites">Favorites</string>
    <string name="add">Add</string>
    <string name="comments">Comments:</string>
    <string name="write_review">Write review...</string>
    <string name="shows_with_actor">Shows with actor</string>
    <string name="recommended_shows">Recommended shows:</string>
    <string name="fields_must_not_be_empty">Fields must not be empty</string>
    <string name="watch_films_and_serials">Watch films and serials</string>
    <string name="films_and_serials">Films and serials</string>
</resources>
